--- a/crop_rotator/strona/templates/strona/plan_parts/plan_summary.html
+++ b/crop_rotator/strona/templates/strona/plan_parts/plan_summary.html
@@ -1,5 +1,12 @@
-<p>{{ items.of_steps }}: {{ plan.2 }}</p>
-<p>{{ items.of_plants }}: {{ plan.3 }}</p>
+<hr/>
+<div class="row">
+  <div class="col-md-6">{{ items.of_steps }}: {{ plan.2 }}</div>
+  <div class="col-md-6">{{ items.of_plants }}: {{ plan.3 }}</div>
+</div>
+<hr/>
 {% for item in plan.1 %}
 <p>{{ item.0.name }} - {{ item.1 }}</p>
 {% endfor %}
+{% if plan.1 %}
+<hr/>
+{% endif %}
