--- a/crop_rotator/templates/base.html
+++ b/crop_rotator/templates/base.html
@@ -129,6 +129,8 @@
                     <p><i class="fa fa-envelope mr-3"></i>jakub.kozdrowicz@gmail.com</p>
                     {% if user.is_staff %}<p><a href="{% url 'admin:index' %}">Panel admina</a>{% endif %}
                     {% endif %}
+                    {% if user.is_staff %}<p><a href="{% url 'rotator_admin' %}">Uproszczony Panel admina CR</a>{% endif %}
+                    {% endif %}
                 </div>
             </div>
             <div class="row mt-5 nopadding">
