Po testach - Uproszczony PA CR działa.
Zmienne niepodpięte.

--- a/crop_rotator/core/templates/core/rotator_admin.html
+++ b/crop_rotator/core/templates/core/rotator_admin.html
@@ -3,7 +3,7 @@
 {% load xfilters %}
 
 {% block title %}
-<title>{{ step.title }}</title>
+<title>$ Uproszczony Panel Admina CR</title>
 {% endblock %}
 
 {% block css %}
@@ -21,13 +21,13 @@
         <div class="col-md-12 plan-main">
           <div class="container">
             <h6 class="text-center pt-3 ">$Uproszczony Panel Admina CR:</h6>
-            <form name="StepChangeForm" method="post" class="form form-inline"> <!-- Formularz usuwa wydarzenie -->
+            <form name="CR_AdminForm" method="post" class="form form-inline"> <!-- Formularz usuwa wydarzenie -->
              {% csrf_token %}
               <p>$ Maksymalna ilość kroków w planie zmianowania: {{ form.max_steps }}</p>
               <p>$ Maksymalna ilość planów zmianowani na użytkownika: {{ form.max_user_plans }}</p>
               <p>$ Czas cachowania (w minutach) planów widzianych "z zewnątrz" ('lurk_plan'): {{ form.lurk_plan_cooldown }}</p>
               <p>$ Czas cachowania (w sekundach) planu po ewaluacji (przeciwdziała bezmyślnemu klikaniu) : {{ form.evaluated_plan_cooldown }}</p>
-              <p><button class="btn btn-link-3 btn-light" name="save_step_changes" type="submit">$Zapisz zmiany</button></p>
+              <p><button class="btn btn-link-3 btn-light" name="save_changes" type="submit">$Zapisz zmiany</button></p>
             </form>
 
         </div>
