--- a/crop_rotator/strona/templates/strona/plan.html
+++ b/crop_rotator/strona/templates/strona/plan.html
@@ -157,7 +157,7 @@
           </div>
         </div>
       </div><!-- /.row -->
-      {% if user_editable and top_tier < 8 %}
+      {% if user_editable and top_tier < admin_max_steps %}
       <div class="row"> <!-- Tutaj idzie dodawanie kolejnych kroków - widoczne tylko dla właściciela -->
         <div class="col-md-7 plan-main">
         <div class="container">
