--- a/crop_rotator/strona/templates/strona/about.html
+++ b/crop_rotator/strona/templates/strona/about.html
@@ -17,7 +17,12 @@
       <br>
        <div class="row featurette">
         <div class="col-md-4">
-          <img src="{{ skin.planimagedefault.url }}" height="300" />
+          <p>{{ about_us.curr_prog_includes }}:</p>
+          <p>{{ about_us.over }} xxx {{ about_us.plants }}</p>
+          <p>{{ about_us.coming_from }} xxx {{ about_us.families }}</p>
+          <p>{{ about_us.marked_by }} xxx {{ about_us.categories }}</p>
+          <p>{{ about_us.and_over }} xxx {{ about_us.unique_interactions }}</p>
+          <p>{{ about_us.described_by }} xxx {{ about_us.sources }}</p>
         </div>
         <div class="col-md-8">
         <p class="lead text-muted">{{ about_us.about_project|linebreaksbr }}</p>
