--- a/crop_rotator/strona/templates/strona/about.html
+++ b/crop_rotator/strona/templates/strona/about.html
@@ -13,7 +13,7 @@
 <main role="main">
   <section class="jumbotron text-center">
     <div class="container">
-      <h1 class="jumbotron-heading">{{ items.contact }}</h1>
+      <h1 class="jumbotron-heading">{{ items.about }}</h1>
       <br>
        <div class="row featurette">
         <div class="col-md-4">
