--- a/crop_rotator/strona/templates/strona/crop_parts/crop_interaction_to.html
+++ b/crop_rotator/strona/templates/strona/crop_parts/crop_interaction_to.html
@@ -1,5 +1,9 @@
-<p><b><a href="{% url 'crop' interaction.0.id %}">{{ interaction.0.name }}</a></b>
-  {% if interaction.1.is_positive %} $dobrze oddziaływuje na {% else %} $szkodzi {% endif %} {{ crop.name }}
+
+
+<p><b>{% if interaction.0.get_cname == "Crop" %}<a href="{% url 'crop' interaction.0.id %}">
+      {% elif interaction.0.get_cname == "CropFamily" %}<a href="{% url 'family' interaction.0.id %}">
+      {% elif interaction.0.get_cname == "CropTag" %}<a href="{% url 'tag' interaction.0.id %}">{% endif %}
+  {{ interaction.0.name }}</a></b> {% if interaction.1.is_positive %} $dobrze oddziaływuje na {% else %} $szkodzi {% endif %} {{ crop.name }}
   - $Typ oddziaływania:
   {% if interaction.1.type_of_interaction == 0 %}
    $Współrzędne
