Wszystkie interakcje wypisane pod rośliną.
Bez tłumaczeń, zalinkowane poprawnie.

--- a/crop_rotator/strona/templates/strona/crop.html
+++ b/crop_rotator/strona/templates/strona/crop.html
@@ -63,7 +63,7 @@
             {% if crop_family_from %}
             <p><b>$Rodzina rośliny oddziaływuje na inne</b></p>
             {% for interaction in crop_family_from %}
-              <p> {{ family.name }} <!--Zmień na nazwę rodziny taka jak jest w interakcji -->
+              <p> {% if crop.family.is_family_slave %}{{ crop.family.family_master.name }} {% else %}{{ crop.family.name }} {% endif %}
                 {% include 'strona/crop_parts/crop_interaction_from.html' %}
             {% endfor %}
             {% endif %}
@@ -85,7 +85,7 @@
             <p><b>$Inne oddziaływują na kategorie rośliny</b></p>
             {% for interaction in crop_tags_to %}
             {% if interaction.1 %}
-                {% include 'strona/crop_parts/crop_interaction_to_tag.html' %}
+                {% include 'strona/crop_parts/crop_interaction_to.html' %}
             {% endif %}
             {% endfor %}
             {% endif %}
