Naprawa buga źle sortującego atrybuty planów.

--- a/crop_rotator/strona/templates/strona/plan_parts/plan_summary.html
+++ b/crop_rotator/strona/templates/strona/plan_parts/plan_summary.html
@@ -5,7 +5,7 @@
 </div>
 <hr/>
 {% for item in plan.1 %}
-<p>{{ item.0.name }} - {{ item.1 }}</p>
+<p>{{ item.0.name }} - {{ item.1 }}%</p>
 {% endfor %}
 {% if plan.1 %}
 <hr/>
